[tool.poetry]
name = "mellyssy_brain_games"
version = "0.1.0"
description = "hexlet project lv1"
authors = ["mellyssy <ksenyatokareva@gmail.com>"]

packages = [
    { include = "brain_games" }
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.scripts]
  brain-games = "brain_games.scripts.brain_games:main"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"